--- a/styles/home.css
+++ b/styles/home.css
@@ -1,16 +1,30 @@
 /* add home page styles here */
-/*#location {
+#location {
     background-image: url('../assets/Forest.png');
     width: 100%;
-    height: auto;
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position: center;
+}
+
+.pictures {
+    display:flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
 }
 
 #architecture {
     background-image: url('../assets/Hut.png');
-    
-}*/
+    width: 100%;
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
 
-.bg {
+/*.bg {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
