--- a/styles/style.css
+++ b/styles/style.css
@@ -32,12 +32,13 @@ body {
 }
 
 main {
-    display: flex;
+    display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items:center;
     margin-bottom: calc(var(--footer-height));
     background-color: RGB(82, 50, 19);
+    
 }
 
 section {
@@ -51,7 +52,7 @@ section {
     padding-bottom: var(--gutter);
     margin-top: var(--gutter);
     margin-bottom: var(--gutter);
-    border: solid 2px var(--color1);
+    
 }
 
 header {
@@ -63,11 +64,12 @@ header {
 }
 
 
-h2 {
-    font-size: 1.8rem;
+h1 {
+    font-size:xx-large;
     font-weight: bold;
     font-family: fantasy;
     color: RGB(176, 196, 0);
+    display: center;
 }
 
 .gutter-right {
@@ -81,6 +83,7 @@ header img {
 p {
     margin: var(--gutter);
     font-family: fantasy;
+    color: RGB(211, 204, 165);
 }
 footer {
     position: fixed;
