--- a/styles/home.css
+++ b/styles/home.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-size:contain; 
     background-position: center;
+    padding: 15px;
 }
 
 .pictures {
@@ -37,7 +38,7 @@ h3 {
     color: RGB(176, 196, 0); 
 }
 
-#location-section {
+/* #location-section {
     background-color: RGB(82, 50, 19);
 }
 
@@ -49,13 +50,10 @@ h3 {
 #known-section {
     background-color: RGB(82, 50, 19);
 
-}
-#location-select {
-    background-color:RGB(211, 204, 165) 
-}
+} */
 
 #slogans {
-    color: RGB(213, 222, 46); 
+    color: RGB(121, 90, 45); 
     font-family: cursive;
 }
 /*.bg {
